--- a/.gitignore
+++ b/.gitignore
@@ -185,6 +185,10 @@ $RECYCLE.BIN/
 
 ### VisualStudioCode ###
 .vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 *.code-workspace
 
 # Local History for Visual Studio Code
