--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
-    "python.pythonPath": "C:\\Users\\Admin\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\edtvelizydiscord-2didyWDm-py3.9\\Scripts\\python.exe",
-    "python.linting.flake8Enabled": true,
-    "python.linting.enabled": true,
-    "python.formatting.provider": "black",
-    "editor.formatOnSave": true
+  "python.pythonPath": "C:\\Users\\Admin\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\edtvelizydiscord-2didyWDm-py3.9\\Scripts\\python.exe",
+  "python.linting.flake8Enabled": true,
+  "python.linting.enabled": true,
+  "python.formatting.provider": "black",
+  "editor.formatOnSave": true,
+  "python.linting.mypyEnabled": true,
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    }
+  }
 }
